# zloy

./: .dockerignore  .env.example  .gitignore  ENVCONF.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: __main__.py  entrypoints.py
app/handlers/: ban_handler.py  on_message_handler.py
app/helpers/: builders.py  errors.py  guards.py
app/repositories/: base.py  violations.py
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  entrypoint.prod.sh
