[tool.poetry]
name = "zloy v2"
version = "0.1.0"
description = "The Telegram chat-manager bot"
authors = ["Twylix <zemskov271@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
psycopg2 = "^2.9.3"
peewee = "^3.15.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
