[tool.poetry]
name = "zloy"
version = "2.0"
description = "The simple chat manager for Telegram"
authors = ["Nikita Zemskov <zemskov271@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.22.2"
psycopg2 = "^2.9.4"
peewee = "^3.15.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
